[metadata]
name = saiblo-upload
version = 0.0.3
author = UNIDY2002
author_email = UNIDY2002@outlook.com
description = Saiblo AI 代码上传脚本
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saiblo/saiblo-upload
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    websockets

[options.entry_points]
console_scripts =
    saiblo-upload = saiblo_upload:upload
